# chroma-cookbooks

./: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
agent-framework/: package.json
agent-framework/src/: index.ts
agent-framework/src/agent/: agent.ts  errors.ts  types.ts
agent-framework/src/components/: base.ts
agentic-memory/: README.md  package.json
agentic-search/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
code-search/: package.json
embeddings-visualizer/: README.md  requirements.txt  visualizations.ipynb
experimentation-playground/: .env.example  README.md  download_sample_data.sh  pyproject.toml
experimentation-playground/configs/: sample_sweep.json
experimentation-playground/src/experimentation_playground/: cli.py  run.py
experimentation-playground/src/experimentation_playground/embed/: base_embed.py  chroma.py  config.py  dense_embed.py  embed_mapping.py  embedding_models.py  sparse_embed.py
experimentation-playground/src/experimentation_playground/eval/: simple_eval.py
experimentation-playground/src/experimentation_playground/llm/: __init__.py  anthropic_llm.py  base_llm.py  llm_mapping.py  openai_llm.py
experimentation-playground/src/experimentation_playground/rerank_results/: base_rerank.py  contextual_rerank.py  rerank_mapping.py  voyage_rerank.py
experimentation-playground/src/experimentation_playground/rewrite_query/: expand_query.py  rewrite_mapping.py
experimentation-playground/src/experimentation_playground/visualize/: visualize_run.py  visualize_sweep.py
(+11 files in other folders)
